<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btGestionStock"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/libBtGestionStock" />

        <Button
            android:id="@+id/btSaisieMenu"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btGestionStock"
            android:layout_centerHorizontal="true"
            android:text="@string/libBtSaisieMenu" />

        <Button
            android:id="@+id/btConsulterMenu"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btGestionStock"
            android:layout_alignParentRight="true"        
            android:text="@string/libBtConsulterMenu" />

        <Button
            android:id="@+id/btListeCourse"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btGestionStock"
            android:text="@string/libBtGenererListeCourse" />

        <Button
            android:id="@+id/btConfig"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btListeCourse"
            android:layout_alignLeft="@+id/btSaisieMenu"
            android:text="@string/libBtConfigurer" />

        <Button
            android:id="@+id/btExit"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btConfig"
            android:layout_alignLeft="@+id/btConsulterMenu"
            android:layout_alignParentRight="true"
            android:text="@string/libBtExit" />

    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.79"
        android:text="@string/libTitreAppli1" />

</LinearLayout>