<?xml version="1.0" encoding="utf-8"?>
<!-- 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
-->    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.77" >

        <TextView
            android:id="@+id/tvEcranConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/libEcranConfig"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <Button
            android:id="@+id/btBdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvEcranConfig"
            android:layout_marginTop="87dp"
            android:text="@string/libBtBdd" />

        <Button
            android:id="@+id/btGestIng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btBdd"
            android:text="@string/libBtGestIng" />

        <Button
            android:id="@+id/btGestPlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btGestIng"
            android:text="@string/libBtGestPlat" />
                
        <Button
            android:id="@+id/btRetour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:text="@string/libBtRetour" />
        
    </RelativeLayout>

<!--  </LinearLayout>-->